git ignore is updated

--- a/prototypev1/.gitignore
+++ b/prototypev1/.gitignore
@@ -1,44 +1,46 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.buildlog/
-.history
-.svn/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# Flutter/Dart specific files
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
 .packages
-.pub-cache/
 .pub/
 /build/
+.dart_tool/
+.idea/
+**/Pods/
+**/Podfile.lock
+**/Pods/Manifest.lock
+ios/Pods/
+android/local.properties
+.vscode/
+*.iml
 
-# Symbolication related
-app.*.symbols
+# Android related files
+**/gradle.properties
+**/local.properties
+**/gradle/
+**/build/
+**/captures/
+**/app/app.iml
+**/app/build/
+**/app/intermediates/
+**/com.android.build.gradle/
+**/com.android.builder/
+**/out/
 
-# Obfuscation related
-app.*.map.json
+# Xcode related files
+ios/Pods/
+ios/Flutter/Flutter.framework/
+ios/Flutter/Flutter.podspec
+ios/Flutter/Generated.xcconfig
+ios/Flutter/AppFrameworkInfo.plist
+ios/Flutter/Flutter.xcconfig
+ios/Runner.xcodeproj/project.xcworkspace/xcuserdata/
+ios/Runner.xcodeproj/xcuserdata/
+ios/Runner.xcodeproj/xcshareddata/
+ios/Runner/GeneratedPluginRegistrant.*
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Other generated files
+.dart_tool_version
+*.g.dart
+*.freezed.dart
